--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="screen_user_details_title">User Details</string>
     <string name="error">Error</string>
     <string name="retry">Retry</string>
-
+    <string name="all_string">All</string>
+    <string name="favorite_string">Favorites</string>
     <string name="user_name">Name: %1$s</string>
     <string name="user_username">Username: @%1$s</string>
     <string name="user_email">Email: %1$s</string>
